<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image_admin_home"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".SignUp">

    <EditText
        android:id="@+id/etUsernameSignUp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:drawableLeft="@drawable/ic_username"
        android:drawablePadding="12dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_enter_username"
        android:inputType="textPersonName"
        android:paddingLeft="20dp" />

    <EditText
        android:id="@+id/etPasswordSignUp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="12dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_enter_password"
        android:inputType="textPassword"
        android:paddingLeft="20dp" />

    <EditText
        android:id="@+id/etConfirmPasswordSignUp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="12dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword"
        android:paddingLeft="20dp" />

    <Button
        android:id="@+id/btnSignUpAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="SignUp"
        android:text="@string/btnSignUp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAlreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Already Have An Account?" />

        <Button
            android:id="@+id/btnGoSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BackToLogin"
            android:text="@string/btnSignIn" />
    </LinearLayout>
</LinearLayout>