<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/tvChangePasswordTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myprofile_change_password_title"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/tvOldPasswordLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:text="@string/myprofile_old_password"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etOldPassword"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/custom_input"
                android:ems="10"
                android:fontFamily="monospace"
                android:gravity="center"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/tvNewPasswordLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:text="@string/myprofile_new_password"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNewPassword"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/custom_input"
                android:ems="10"
                android:fontFamily="monospace"
                android:gravity="center"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/tvConfirmNewPasswordLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:text="@string/myprofile_confirm_new_password"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etConfirmNewPassword"
                android:layout_width="210dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/custom_input"
                android:ems="10"
                android:fontFamily="monospace"
                android:gravity="center"
                android:inputType="textPassword" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvButtonSaveChanges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btnCancelChangePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="@string/cancel_changes" />

            <Button
                android:id="@+id/btnSaveNewPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="@string/save_changes" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>